avg off,def,pace

--- a/Explore.ipynb
+++ b/Explore.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -43,51 +43,28 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>3101</td>\n",
-       "      <td>Abilene Chr</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>3102</td>\n",
-       "      <td>Air Force</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>3103</td>\n",
-       "      <td>Akron</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>3104</td>\n",
-       "      <td>Alabama</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>3105</td>\n",
-       "      <td>Alabama A&amp;M</td>\n",
+       "      <td>231</td>\n",
+       "      <td>3333</td>\n",
+       "      <td>Oregon St</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   TeamID     TeamName\n",
-       "0    3101  Abilene Chr\n",
-       "1    3102    Air Force\n",
-       "2    3103        Akron\n",
-       "3    3104      Alabama\n",
-       "4    3105  Alabama A&M"
+       "     TeamID   TeamName\n",
+       "231    3333  Oregon St"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "teams = pd.read_csv('WDataFiles_Stage1/WTeams.csv')\n",
-    "teams.head()"
+    "teams.head()\n",
+    "teams[teams['TeamID']  == 3333]"
    ]
   },
   {
