--- a/Explore.ipynb
+++ b/Explore.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -43,20 +43,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>231</td>\n",
-       "      <td>3333</td>\n",
-       "      <td>Oregon St</td>\n",
+       "      <td>61</td>\n",
+       "      <td>3163</td>\n",
+       "      <td>Connecticut</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     TeamID   TeamName\n",
-       "231    3333  Oregon St"
+       "    TeamID     TeamName\n",
+       "61    3163  Connecticut"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
    "source": [
     "teams = pd.read_csv('WDataFiles_Stage1/WTeams.csv')\n",
     "teams.head()\n",
-    "teams[teams['TeamID']  == 3333]"
+    "teams[teams['TeamID']  == 3163]"
    ]
   },
   {
