neural network notebook

--- a/Derived Stats.ipynb
+++ b/Derived Stats.ipynb
@@ -1550,7 +1550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1574,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1583,7 +1583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1592,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1601,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1620,7 +1620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1631,7 +1631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2047,7 +2047,7 @@
        "[3469 rows x 42 columns]"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2059,7 +2059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2163,7 +2163,7 @@
        "[3469 rows x 1 columns]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2175,9 +2175,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/jonathanpiech/anaconda3/envs/ncaa/lib/python3.7/site-packages/pandas/core/frame.py:4223: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  return super().rename(**kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "avg_opp_opp.rename(columns={'OWinP': 'OppOWinP'}, inplace=True)\n",
     "# avg_opp_opp.reset_index(inplace=True)\n"
@@ -2185,7 +2197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2194,7 +2206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2203,7 +2215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2212,7 +2224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2572,13 +2584,393 @@
        "[103164 rows x 47 columns]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "reg_rpi.sort_values(by=['RPI'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg_rpi.to_csv(\"derived_stats.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GameID</th>\n",
+       "      <th>Season</th>\n",
+       "      <th>DayNum</th>\n",
+       "      <th>Loc</th>\n",
+       "      <th>NumOT</th>\n",
+       "      <th>TeamID</th>\n",
+       "      <th>Score</th>\n",
+       "      <th>FGM</th>\n",
+       "      <th>FGA</th>\n",
+       "      <th>FGM3</th>\n",
+       "      <th>...</th>\n",
+       "      <th>OPoss</th>\n",
+       "      <th>Pace</th>\n",
+       "      <th>OFF</th>\n",
+       "      <th>DEF</th>\n",
+       "      <th>Wins</th>\n",
+       "      <th>Games</th>\n",
+       "      <th>WinP</th>\n",
+       "      <th>OWinP</th>\n",
+       "      <th>OppOWinP</th>\n",
+       "      <th>RPI</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>11</td>\n",
+       "      <td>H</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3103</td>\n",
+       "      <td>63</td>\n",
+       "      <td>23</td>\n",
+       "      <td>54</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>70.750</td>\n",
+       "      <td>70.8875</td>\n",
+       "      <td>88.873215</td>\n",
+       "      <td>69.123611</td>\n",
+       "      <td>17</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0.566667</td>\n",
+       "      <td>0.478130</td>\n",
+       "      <td>0.478130</td>\n",
+       "      <td>0.500264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>11</td>\n",
+       "      <td>N</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3104</td>\n",
+       "      <td>73</td>\n",
+       "      <td>26</td>\n",
+       "      <td>62</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>81.825</td>\n",
+       "      <td>80.5625</td>\n",
+       "      <td>90.612878</td>\n",
+       "      <td>84.406517</td>\n",
+       "      <td>11</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0.379310</td>\n",
+       "      <td>0.529278</td>\n",
+       "      <td>0.529278</td>\n",
+       "      <td>0.491786</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>11</td>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3110</td>\n",
+       "      <td>71</td>\n",
+       "      <td>29</td>\n",
+       "      <td>62</td>\n",
+       "      <td>6</td>\n",
+       "      <td>...</td>\n",
+       "      <td>66.925</td>\n",
+       "      <td>66.8125</td>\n",
+       "      <td>106.267540</td>\n",
+       "      <td>88.306829</td>\n",
+       "      <td>13</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0.619048</td>\n",
+       "      <td>0.510250</td>\n",
+       "      <td>0.510250</td>\n",
+       "      <td>0.537449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>11</td>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3111</td>\n",
+       "      <td>63</td>\n",
+       "      <td>27</td>\n",
+       "      <td>52</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>74.875</td>\n",
+       "      <td>76.0750</td>\n",
+       "      <td>82.813013</td>\n",
+       "      <td>76.240552</td>\n",
+       "      <td>19</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.612903</td>\n",
+       "      <td>0.488375</td>\n",
+       "      <td>0.488375</td>\n",
+       "      <td>0.519507</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>11</td>\n",
+       "      <td>H</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3119</td>\n",
+       "      <td>74</td>\n",
+       "      <td>30</td>\n",
+       "      <td>74</td>\n",
+       "      <td>7</td>\n",
+       "      <td>...</td>\n",
+       "      <td>76.975</td>\n",
+       "      <td>76.6000</td>\n",
+       "      <td>96.605744</td>\n",
+       "      <td>91.383812</td>\n",
+       "      <td>8</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.411396</td>\n",
+       "      <td>0.411396</td>\n",
+       "      <td>0.391880</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>103159</td>\n",
+       "      <td>51577</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>132</td>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3251</td>\n",
+       "      <td>49</td>\n",
+       "      <td>19</td>\n",
+       "      <td>53</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>65.650</td>\n",
+       "      <td>64.9625</td>\n",
+       "      <td>75.428132</td>\n",
+       "      <td>110.833173</td>\n",
+       "      <td>15</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.483871</td>\n",
+       "      <td>0.496634</td>\n",
+       "      <td>0.496634</td>\n",
+       "      <td>0.493444</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>103160</td>\n",
+       "      <td>51578</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>132</td>\n",
+       "      <td>H</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3179</td>\n",
+       "      <td>79</td>\n",
+       "      <td>24</td>\n",
+       "      <td>56</td>\n",
+       "      <td>14</td>\n",
+       "      <td>...</td>\n",
+       "      <td>78.675</td>\n",
+       "      <td>79.1125</td>\n",
+       "      <td>99.857797</td>\n",
+       "      <td>118.818139</td>\n",
+       "      <td>26</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.812500</td>\n",
+       "      <td>0.543791</td>\n",
+       "      <td>0.543791</td>\n",
+       "      <td>0.610968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>103161</td>\n",
+       "      <td>51579</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>132</td>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3335</td>\n",
+       "      <td>54</td>\n",
+       "      <td>20</td>\n",
+       "      <td>56</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>64.550</td>\n",
+       "      <td>64.6000</td>\n",
+       "      <td>83.591331</td>\n",
+       "      <td>100.619195</td>\n",
+       "      <td>22</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0.785714</td>\n",
+       "      <td>0.481376</td>\n",
+       "      <td>0.481376</td>\n",
+       "      <td>0.557461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>103162</td>\n",
+       "      <td>51580</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>132</td>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3144</td>\n",
+       "      <td>45</td>\n",
+       "      <td>18</td>\n",
+       "      <td>61</td>\n",
+       "      <td>5</td>\n",
+       "      <td>...</td>\n",
+       "      <td>63.975</td>\n",
+       "      <td>63.6750</td>\n",
+       "      <td>70.671378</td>\n",
+       "      <td>89.517079</td>\n",
+       "      <td>19</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.612903</td>\n",
+       "      <td>0.423150</td>\n",
+       "      <td>0.423150</td>\n",
+       "      <td>0.470589</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>103163</td>\n",
+       "      <td>51581</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>132</td>\n",
+       "      <td>A</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3384</td>\n",
+       "      <td>54</td>\n",
+       "      <td>19</td>\n",
+       "      <td>57</td>\n",
+       "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>69.975</td>\n",
+       "      <td>70.2875</td>\n",
+       "      <td>76.827316</td>\n",
+       "      <td>92.477325</td>\n",
+       "      <td>15</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.468750</td>\n",
+       "      <td>0.488198</td>\n",
+       "      <td>0.488198</td>\n",
+       "      <td>0.483336</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>103164 rows × 47 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        GameID  Season  DayNum Loc  NumOT  TeamID  Score  FGM  FGA  FGM3  ...  \\\n",
+       "0            0    2010      11   H      0    3103     63   23   54     5  ...   \n",
+       "1            1    2010      11   N      0    3104     73   26   62     5  ...   \n",
+       "2            2    2010      11   A      0    3110     71   29   62     6  ...   \n",
+       "3            3    2010      11   A      0    3111     63   27   52     4  ...   \n",
+       "4            4    2010      11   H      1    3119     74   30   74     7  ...   \n",
+       "...        ...     ...     ...  ..    ...     ...    ...  ...  ...   ...  ...   \n",
+       "103159   51577    2019     132   A      0    3251     49   19   53     4  ...   \n",
+       "103160   51578    2019     132   H      0    3179     79   24   56    14  ...   \n",
+       "103161   51579    2019     132   A      0    3335     54   20   56     4  ...   \n",
+       "103162   51580    2019     132   A      0    3144     45   18   61     5  ...   \n",
+       "103163   51581    2019     132   A      0    3384     54   19   57     4  ...   \n",
+       "\n",
+       "         OPoss     Pace         OFF         DEF  Wins  Games      WinP  \\\n",
+       "0       70.750  70.8875   88.873215   69.123611    17     30  0.566667   \n",
+       "1       81.825  80.5625   90.612878   84.406517    11     29  0.379310   \n",
+       "2       66.925  66.8125  106.267540   88.306829    13     21  0.619048   \n",
+       "3       74.875  76.0750   82.813013   76.240552    19     31  0.612903   \n",
+       "4       76.975  76.6000   96.605744   91.383812     8     24  0.333333   \n",
+       "...        ...      ...         ...         ...   ...    ...       ...   \n",
+       "103159  65.650  64.9625   75.428132  110.833173    15     31  0.483871   \n",
+       "103160  78.675  79.1125   99.857797  118.818139    26     32  0.812500   \n",
+       "103161  64.550  64.6000   83.591331  100.619195    22     28  0.785714   \n",
+       "103162  63.975  63.6750   70.671378   89.517079    19     31  0.612903   \n",
+       "103163  69.975  70.2875   76.827316   92.477325    15     32  0.468750   \n",
+       "\n",
+       "           OWinP  OppOWinP       RPI  \n",
+       "0       0.478130  0.478130  0.500264  \n",
+       "1       0.529278  0.529278  0.491786  \n",
+       "2       0.510250  0.510250  0.537449  \n",
+       "3       0.488375  0.488375  0.519507  \n",
+       "4       0.411396  0.411396  0.391880  \n",
+       "...          ...       ...       ...  \n",
+       "103159  0.496634  0.496634  0.493444  \n",
+       "103160  0.543791  0.543791  0.610968  \n",
+       "103161  0.481376  0.481376  0.557461  \n",
+       "103162  0.423150  0.423150  0.470589  \n",
+       "103163  0.488198  0.488198  0.483336  \n",
+       "\n",
+       "[103164 rows x 47 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg_rpi"
    ]
   },
   {
